Upgrade test database to latest LocalDB version

--- a/test/Dapper.NodaTime.Tests/App.config
+++ b/test/Dapper.NodaTime.Tests/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="TestDB"
-         connectionString="Data Source=(LocalDB)\v11.0;Integrated Security=true;AttachDbFileName=|DataDirectory|\TestDB.mdf"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Integrated Security=true;AttachDbFileName=|DataDirectory|TestDB.mdf"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
